--- a/build.gradle
+++ b/build.gradle
@@ -17,11 +17,21 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
+	implementation 'org.postgresql:postgresql:42.5.0'
 	runtimeOnly 'org.postgresql:postgresql'
 
-	implementation 'org.mapstruct:mapstruct:1.5.2.Final'
+	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
 
-	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
+	compileOnly 'org.projectlombok:lombok:1.18.24'
+	annotationProcessor 'org.projectlombok:lombok:1.18.24'
+
+	testCompileOnly 'org.projectlombok:lombok:1.18.24'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
+
+	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+	implementation 'io.springfox:springfox-swagger2:3.0.0'
+
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
