--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,8 @@ server.port= 8090
 
 # Database
 spring.jpa.database=postgresql
-spring.datasource.url= jdbc:postgresql://localhost:5432/mini-market
+spring.datasource.url= jdbc:postgresql://localhost:5432/market
 spring.datasource.driver-class-name= org.postgresql.Driver
 spring.datasource.username= postgres
 spring.datasource.password= 05102001
+spring.jpa.show-sql=true
