--- a/src/main/resources/application-pdn.properties
+++ b/src/main/resources/application-pdn.properties
@@ -2,7 +2,7 @@ server.port=80
 
 # Database
 spring.jpa.database=postgresql
-spring.datasource.url= jdbc:postgresql://localhost:5432/mini-market
+spring.datasource.url= jdbc:postgresql://localhost:5432/market
 spring.datasource.driver-class-name= org.postgresql.Driver
 spring.datasource.username= postgres
 spring.datasource.password= 05102001
